--- a/applied_statistics/inferential-statistics.ipynb
+++ b/applied_statistics/inferential-statistics.ipynb
@@ -379,8 +379,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8c84ddbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = dff['winner_hand'] == 'R'\n",
+    "b = dff['loser_hand'] == 'L'\n",
+    "c = a == b\n",
+    "d = dff[c]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "50680562",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-13-7ef3f245f015>:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  d['success'] = d['winner_hand'].replace({'R' : 'success', 'L' : 'failure'})\n"
+     ]
+    }
+   ],
+   "source": [
+    "d['success'] = d['winner_hand'].replace({'R' : 'success', 'L' : 'failure'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "eee38691",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>winner_hand</th>\n",
+       "      <th>loser_hand</th>\n",
+       "      <th>success</th>\n",
+       "      <th>Success</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>success</td>\n",
+       "      <td>success</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>success</td>\n",
+       "      <td>success</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>failure</td>\n",
+       "      <td>failure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>failure</td>\n",
+       "      <td>failure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>failure</td>\n",
+       "      <td>failure</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   winner_hand loser_hand  success  Success\n",
+       "5            R          L  success  success\n",
+       "7            R          L  success  success\n",
+       "11           L          R  failure  failure\n",
+       "23           L          R  failure  failure\n",
+       "25           L          R  failure  failure"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94ba8c9e",
    "metadata": {},
    "outputs": [],
    "source": []
